# GameLive

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/vance/gamelive/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  ArrayPoolLinked.java  ArrayPoolLruCache.java
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  packt.h
app/src/main/cpp/librtmp/: COPYING  dh.h  rtmp.c
app/src/main/java/com/vance/gamelive/: MainActivity.java  MyApplication.java  ScreenLive.java
app/src/main/java/com/vance/gamelive/codec/: AudioCodec.java  LiveTaskManager.java  RTMPPackage.java  VideoCodec.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/vance/gamelive/: ExampleUnitTest.java
dec/: build.gradle
dec/src/main/java/com/vance/dec/: AESUtils.java  Base64Utils.java  Main.java
gradle/wrapper/: gradle-wrapper.properties
gsonExample/: build.gradle
gsonExample/src/main/java/com/vance/gsonexample/: GsonTest.java  J.java  TestBean.java  TestTypeAdapter.java
mylibrary/: build.gradle
mylibrary/src/androidTest/java/com/vance/mylibrary/: ExampleInstrumentedTest.java
mylibrary/src/main/: AndroidManifest.xml
mylibrary/src/main/cpp/: CMakeLists.txt  native-lib.cpp
mylibrary/src/test/java/com/vance/mylibrary/: ExampleUnitTest.java
tool/: build.gradle
tool/src/main/java/com/vance/tool/: AESUtils.java  Base64Utils.java  Main.java  ZipUtil.java
videoCrop/: build.gradle
videoCrop/src/main/java/com/vance/videocrop/: CropTask.java  MyClass.java  RuntimeTask.java  Video.java
(+10 files in other folders)
